2004-01-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb:
	(Socket_Hidden): Put original socket inside record. It is for shorter
	 access (Socket.S.FD instead of SFD (Socket.S.all)) and prepear place
	 for Socket_Set_Type for timeout implementation.

2004-01-01  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__gnat.adb:
	Fix typo in comment.
        Update copyright notice.

2003-11-25  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__posix.adb:
	(Base_Name): New routine.
	(File_Extension): Idem.
	(File_Name): Idem.
	(For_Every_Directory_Entry): Idem.
	Put routines in alphabetical order.
	Reformat code.
	Update copyright notice.

	* aws-os_lib__gnat.adb:
	(Dir_Type_Hidden): Removed.
	(G_Dir_Type): Removed.
	(Close): Idem.
	(For_Every_Directory_Entry): New routine. Generic iterator instead
	 of the Open/Read/Close. Cleaner, code is simpler.
	(Open): Removed.
	(Read): Idem.
	Minor reformatting.

2003-11-17  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__gnat.adb:
	(Open): New procedure.
	(Read): Idem.
	(Close): Idem.
	(Base_Name): Idem.
	(File_Extension): Idem.
	(File_Name): Idem.
	Part of work for ObjectAda compatibility.

2003-11-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__gnat.adb:
	Minor comment fix.
	Minor reformatting.
	Update copyright notice.

2003-11-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-os_lib__gnat.adb:
	(Max_Path): New constant.
	(Is_Directory): Test for path length before call GNAT routine.
	(Is_Regular_File): Idem.

2003-10-29  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-translator-conversion__p.adb, aws-translator-conversion__f.adb:
	Fix typo in comment.
	Minor reformatting.

2003-10-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use GNATMAKE_FOR_HOST to build test_uconv. Support for cross-compilers.

	* aws-net-std__gnat.adb:
	(Shutdown): Add handler for Constraint_Error. This is continued
	 work for fix checked-in on 2003-07-15. Again this is really a
	 workaround.
